--- a/countdown.html
+++ b/countdown.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Vasavi Sarovar — Handover Countdown</title>
+<title>VASAVI SAROVAR - HANDOVER COUNTDOWN</title>
 <style>
   /* ----- Background (Sarovar blue + Vasavi gold) ----- */
   :root{--gold:#f6a65b;}
@@ -29,7 +29,7 @@
 
   /* header & countdown */
   header{padding-top:48px}
-  h1{margin:0;font-size:26px;color:var(--gold)}
+  h1{margin:0;font-size:36px;color:var(--gold)}
   #countdown-box{margin:18px auto 6px;background:rgba(0,0,0,0.36);padding:14px 22px;border-radius:10px;display:inline-block;box-shadow:0 10px 30px rgba(0,0,0,0.4)}
   #countdown{font-weight:700;color:var(--gold);font-size:20px}
 
@@ -82,7 +82,8 @@
   <div class="bg-glow g2"></div>
 
   <header>
-    <h1>Vasavi Sarovar — Handover Countdown</h1>
+    <h1>VASAVI SAROVAR</h1>
+    <h1>HANDOVER COUNTDOWN</h1>
     <div id="countdown-box"><div id="countdown">Loading…</div></div>
   </header>
 
